2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* layout.h:
	* layout.cpp: Reverting r131679, it breaks MS DRT #26.

2009-04-15  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::DownloaderComplete): Instead of
	invalidating the TextBoxBase, we need to emit an event to let the
	TextBoxView know our font has changed.
	(TextBoxView::OnModelChanged): Reset state on the layout when the
	font changes (since it has no way of knowing that the font has
	changed otherwise).

	* textblock.cpp (Inline::UpdateFontDescription): Return true if
	the font has changed or false otherwise.
	(TextBlock::UpdateFontDescriptions): If any of the fonts changed,
	return true and reset the state on the TextLayout.

	* font.cpp (TextFontDescription::Set*): Return true if the font
	has changed or false otherwise.

	* layout.cpp (TextLayout::ResetState): New method to reset the
	state of a TextLayout. Normally the state only gets reset if a
	layout property chanegs, but sometimes it is necessary to notify
	the TextLayout engine of a state change in one of the
	TextLayoutAttributes.

2009-04-15  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::SetFontResource): If the font isn't a
	xap resource, download it from the web.

	* textblock.cpp (Inline::SetFontResource): If the font isn't a xap
	resource, download it from the web.

2009-04-15  Larry Ewing  <lewing@novell.com>

	* dirty.cpp (UpdateLayout): a quick hack to get popups sizing
	correctly.

2009-04-15  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (layout_word_wrap): The HANGUL enums weren't added to
	glib until 2.10, so so guard to allow building on systems with
	older versions of glib. Also merged BREAK_NEXT_LINE and
	BREAK_UNKNOWN into the BREAK_AFTER group.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp: Don't support versions of the type "1.0..0".
	  Fixes a test case in MS DRT #21.

2009-04-15  Stephane Delcroix  <sdelcroix@novell.com>
