@@ -1,5 +1,11 @@
 2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* deployment.cpp: mono_gc_invoke_finalizers may cause the
+	  current appdomain to change, so restore it afterwards. Fixes
+	  a rare, random crash upon shutdown.
+
+2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* layout.h:
 	* layout.cpp: Reverting r131679, it breaks MS DRT #26.
 
